added a link to stylesheet

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,7 @@
 <DOCTYPE html>
-    <head></head>
+    <head>
+        <link rel="stylesheet" type="text/css" href="/styles.css" />
+    </head>
     <title>expensify-app</title>
     <body>
         <div id="app"></div>
